PROJECT (vtkU3DExporterTest)
cmake_minimum_required(VERSION 2.6)

FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "Example ${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE (${VTK_USE_FILE})

SET(Libraries vtkRendering vtkHybrid)

# IF(APPLE)
#   SET(EXECUTABLE_FLAG MACOSX_BUNDLE)
# ENDIF(APPLE)

# ADD_DEFINITIONS( -DDEBUG -D_DEBUG )
find_library(U3D_LIB IDTF)
if(NOT U3D_LIB)
	message(STATUS "Couldn't find U3D libraries.")
endif(NOT U3D_LIB)
find_path(U3D_INCLUDE_DIR u3d/SceneConverterLib.h)
if(NOT U3D_INCLUDE_DIR)
	message(STATUS "Couldn't find U3D headers.")
endif(NOT U3D_INCLUDE_DIR)
message(STATUS "Found U3D libraries at: ${U3D_LIB}")
message(STATUS "Found U3D headers: ${U3D_INCLUDE_DIR}")
#add_definitions(-DHAVE_U3D)
include_directories(${U3D_INCLUDE_DIR}/u3d)
ADD_EXECUTABLE(${PROJECT_NAME} ${EXECUTABLE_FLAG} ${PROJECT_NAME}.cxx vtkU3DExporter.cxx vtkU3DExporter.h )
target_link_libraries(${PROJECT_NAME} ${U3D_LIB} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Libraries})
